--- a/Example/Resources/Base.lproj/Main.storyboard
+++ b/Example/Resources/Base.lproj/Main.storyboard
@@ -21,29 +21,24 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fabrice-villard" translatesAutoresizingMaskIntoConstraints="NO" id="6SV-m8-SzA">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fNf-OA-xoK" customClass="GhostTyping">
-                                <rect key="frame" x="0.0" y="399" width="375" height="268"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="268" id="hOh-z0-rbv"/>
-                                </constraints>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H56-kk-dfj" customClass="GhostTyping">
+                                <rect key="frame" x="0.0" y="452" width="375" height="215"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="text" value="Hello My name is:"/>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6SV-m8-SzA" secondAttribute="trailing" id="2Tf-LF-Nzr"/>
-                            <constraint firstItem="fNf-OA-xoK" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5bp-q3-YIC"/>
                             <constraint firstItem="6SV-m8-SzA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jDf-wU-quu"/>
-                            <constraint firstItem="fNf-OA-xoK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="jR4-nB-Ms0"/>
                             <constraint firstItem="6SV-m8-SzA" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kYC-C4-nvA"/>
-                            <constraint firstItem="fNf-OA-xoK" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="nV7-UD-Xdi"/>
                             <constraint firstAttribute="bottom" secondItem="6SV-m8-SzA" secondAttribute="bottom" id="vL5-Jp-nfR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <connections>
-                        <outlet property="ghostTypingView" destination="fNf-OA-xoK" id="9hl-VP-WRv"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
